[gd_scene load_steps=22 format=3 uid="uid://b32f31pix8ir3"]

[ext_resource type="Script" uid="uid://chyfy2x23dpk" path="res://scripts/main.gd" id="1_trceg"]
[ext_resource type="Script" uid="uid://dqos64vbv28ql" path="res://scripts/coefficient.gd" id="2_a8y0u"]
[ext_resource type="Script" uid="uid://dfk3q75enh0id" path="res://scripts/game_manager.gd" id="2_trceg"]
[ext_resource type="PackedScene" uid="uid://dh8suwtxc1frp" path="res://scenes/target.tscn" id="4_jbj1t"]
[ext_resource type="PackedScene" uid="uid://dw1h23s22yobx" path="res://scenes/quadra.tscn" id="5_muem4"]
[ext_resource type="PackedScene" uid="uid://dk0dbij27ectd" path="res://scenes/player1.tscn" id="6_dp3eg"]
[ext_resource type="PackedScene" uid="uid://cgnxaq4bqip32" path="res://scenes/bola.tscn" id="7_0ld40"]
[ext_resource type="Texture2D" uid="uid://xg5aiot2b0p3" path="res://assets/sprites/Prinbles_GUI_Asset_Silent (1.0.0)/asset/png@2x/Panel/Window/Big@2x.png" id="8_gqmmt"]
[ext_resource type="Texture2D" uid="uid://djiyikahwo0kt" path="res://assets/sprites/Prinbles_GUI_Asset_Silent (1.0.0)/asset/png@2x/ProgressBar/Line@2x.png" id="9_yc10j"]
[ext_resource type="Script" uid="uid://bhdu10tvwq3fu" path="res://scripts/topo.gd" id="10_jscy8"]
[ext_resource type="Texture2D" uid="uid://c17q4jgs7ml2g" path="res://assets/sprites/Prinbles_GUI_Asset_Silent (1.0.0)/asset/png/Buttons/Square-Medium/Repeat/Default.png" id="11_eb6dy"]
[ext_resource type="Script" uid="uid://clkxyl2k2egia" path="res://scripts/avancar.gd" id="12_jbj1t"]
[ext_resource type="Script" uid="uid://dxnstrcdo33lv" path="res://scripts/reiniciar.gd" id="13_a8y0u"]
[ext_resource type="Texture2D" uid="uid://ddd2du4k367yu" path="res://assets/sprites/Prinbles_GUI_Asset_Silent (1.0.0)/asset/png/Buttons/Square-Medium/Play/Default.png" id="13_jbj1t"]
[ext_resource type="Texture2D" uid="uid://bm8wdhi6ojpqo" path="res://assets/sprites/Prinbles_GUI_Asset_Silent (1.0.0)/asset/png/Buttons/Square-Medium/Home/Default.png" id="14_jkv2x"]
[ext_resource type="Script" uid="uid://d1a62ext3uqbp" path="res://scripts/menu.gd" id="15_jkv2x"]
[ext_resource type="Texture2D" uid="uid://51q603aa2nio" path="res://assets/sprites/fundo azul.webp" id="17_muem4"]
[ext_resource type="Texture2D" uid="uid://dm340p2yxib7k" path="res://assets/sprites/Prinbles_GUI_Asset_Silent (1.0.0)/asset/@previews/Button.png" id="18_dp3eg"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_muem4"]
texture = ExtResource("13_jbj1t")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k3sjr"]
texture = ExtResource("11_eb6dy")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_trceg"]
texture = ExtResource("14_jkv2x")

[node name="Main" type="Node2D"]
script = ExtResource("1_trceg")

[node name="GameManager" type="Node2D" parent="."]
script = ExtResource("2_trceg")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CanvaVitoria" type="CanvasLayer" parent="CanvasLayer"]

[node name="PainelVitoria" type="Panel" parent="CanvasLayer/CanvaVitoria"]
process_mode = 3
visible = false
offset_left = 502.0
offset_top = 217.0
offset_right = 1437.0
offset_bottom = 796.0

[node name="Big_2x" type="Sprite2D" parent="CanvasLayer/CanvaVitoria/PainelVitoria"]
position = Vector2(461.5, 329.5)
scale = Vector2(0.890625, 0.881127)
texture = ExtResource("8_gqmmt")

[node name="Line_2x" type="Sprite2D" parent="CanvasLayer/CanvaVitoria/PainelVitoria"]
position = Vector2(460, 57.5859)
scale = Vector2(1.20705, 3.3701)
texture = ExtResource("9_yc10j")

[node name="Topo" type="Label" parent="CanvasLayer/CanvaVitoria/PainelVitoria"]
layout_mode = 0
offset_left = 102.5
offset_top = -28.0002
offset_right = 853.5
offset_bottom = 109.0
theme_override_font_sizes/font_size = 80
text = "Rodada x Concluída"
script = ExtResource("10_jscy8")

[node name="Texto" type="Label" parent="CanvasLayer/CanvaVitoria/PainelVitoria"]
layout_mode = 0
offset_left = 240.0
offset_top = 161.0
offset_right = 685.0
offset_bottom = 257.0
theme_override_font_sizes/font_size = 70
text = "Texto..vitoria"

[node name="Avancar" type="Button" parent="CanvasLayer/CanvaVitoria/PainelVitoria"]
layout_mode = 0
offset_left = 369.0
offset_top = 501.0
offset_right = 565.0
offset_bottom = 680.0
theme_override_styles/focus = SubResource("StyleBoxTexture_muem4")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxTexture_muem4")
theme_override_styles/disabled = SubResource("StyleBoxTexture_muem4")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_muem4")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_muem4")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_muem4")
theme_override_styles/hover = SubResource("StyleBoxTexture_muem4")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_muem4")
theme_override_styles/pressed = SubResource("StyleBoxTexture_muem4")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_muem4")
theme_override_styles/normal = SubResource("StyleBoxTexture_muem4")
script = ExtResource("12_jbj1t")

[node name="CanvaDerrota" type="CanvasLayer" parent="CanvasLayer"]

[node name="PainelDerrota" type="Panel" parent="CanvasLayer/CanvaDerrota"]
process_mode = 3
visible = false
offset_left = 502.0
offset_top = 217.0
offset_right = 1437.0
offset_bottom = 796.0

[node name="Big_2x" type="Sprite2D" parent="CanvasLayer/CanvaDerrota/PainelDerrota"]
position = Vector2(461.5, 329.5)
scale = Vector2(0.890625, 0.881127)
texture = ExtResource("8_gqmmt")

[node name="Line_2x" type="Sprite2D" parent="CanvasLayer/CanvaDerrota/PainelDerrota"]
position = Vector2(460, 57.5859)
scale = Vector2(1.20705, 3.3701)
texture = ExtResource("9_yc10j")

[node name="Topo" type="Label" parent="CanvasLayer/CanvaDerrota/PainelDerrota"]
layout_mode = 0
offset_left = 102.5
offset_top = -28.0002
offset_right = 853.5
offset_bottom = 109.0
theme_override_font_sizes/font_size = 80
text = "Rodada x Encerrada"
script = ExtResource("10_jscy8")

[node name="Texto" type="Label" parent="CanvasLayer/CanvaDerrota/PainelDerrota"]
layout_mode = 0
offset_left = 196.0
offset_top = 151.0
offset_right = 831.0
offset_bottom = 247.0
theme_override_font_sizes/font_size = 70
text = "Texto para derrota"

[node name="Reiniciar" type="Button" parent="CanvasLayer/CanvaDerrota/PainelDerrota"]
layout_mode = 0
offset_left = 121.0
offset_top = 539.0
offset_right = 390.0
offset_bottom = 730.0
theme_override_styles/focus = SubResource("StyleBoxTexture_k3sjr")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxTexture_k3sjr")
theme_override_styles/disabled = SubResource("StyleBoxTexture_k3sjr")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_k3sjr")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_k3sjr")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_k3sjr")
theme_override_styles/hover = SubResource("StyleBoxTexture_k3sjr")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_k3sjr")
theme_override_styles/pressed = SubResource("StyleBoxTexture_k3sjr")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_k3sjr")
theme_override_styles/normal = SubResource("StyleBoxTexture_k3sjr")
script = ExtResource("13_a8y0u")

[node name="Menu" type="Button" parent="CanvasLayer/CanvaDerrota/PainelDerrota"]
process_mode = 3
layout_mode = 0
offset_left = 563.0
offset_top = 537.0
offset_right = 814.0
offset_bottom = 742.0
theme_override_styles/focus = SubResource("StyleBoxTexture_trceg")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxTexture_trceg")
theme_override_styles/disabled = SubResource("StyleBoxTexture_trceg")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_trceg")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_trceg")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_trceg")
theme_override_styles/hover = SubResource("StyleBoxTexture_trceg")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_trceg")
theme_override_styles/pressed = SubResource("StyleBoxTexture_trceg")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_trceg")
theme_override_styles/normal = SubResource("StyleBoxTexture_trceg")
script = ExtResource("15_jkv2x")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CoefficientA" type="LineEdit" parent="UI"]
layout_mode = 0
offset_left = 568.0
offset_top = 43.0
offset_right = 764.0
offset_bottom = 120.0
theme_override_font_sizes/font_size = 50
placeholder_text = "a"
script = ExtResource("2_a8y0u")
variable_name = "CoefficientA"

[node name="CoefficientB" type="LineEdit" parent="UI"]
layout_mode = 0
offset_left = 865.0
offset_top = 43.0
offset_right = 1061.0
offset_bottom = 120.0
theme_override_font_sizes/font_size = 50
placeholder_text = "b"
script = ExtResource("2_a8y0u")
variable_name = "CoefficientB"

[node name="CoefficientC" type="LineEdit" parent="UI"]
layout_mode = 0
offset_left = 1145.0
offset_top = 43.0
offset_right = 1341.0
offset_bottom = 120.0
theme_override_font_sizes/font_size = 50
placeholder_text = "c"
script = ExtResource("2_a8y0u")
variable_name = "CoefficientC"

[node name="stTerm" type="Label" parent="UI"]
layout_mode = 0
offset_left = 1067.0
offset_top = 43.0
offset_right = 1138.0
offset_bottom = 117.0
theme_override_font_sizes/font_size = 50
text = "x +"

[node name="ndTerm" type="Label" parent="UI"]
layout_mode = 0
offset_left = 770.0
offset_top = 43.0
offset_right = 858.0
offset_bottom = 117.0
theme_override_font_sizes/font_size = 50
text = "x² +"

[node name="Score" type="Label" parent="UI"]
layout_mode = 0
offset_left = 1934.0
offset_top = -97.0
offset_right = 2230.0
offset_bottom = -23.0
theme_override_font_sizes/font_size = 50
text = "Placar"
horizontal_alignment = 1

[node name="Time" type="Label" parent="UI"]
layout_mode = 0
offset_left = 106.0
offset_top = 73.0
offset_right = 402.0
offset_bottom = 147.0
theme_override_font_sizes/font_size = 50
text = "Tempo"

[node name="Rodada" type="Label" parent="UI"]
layout_mode = 0
offset_left = 1588.0
offset_top = 35.0
offset_right = 1884.0
offset_bottom = 109.0
theme_override_font_sizes/font_size = 50
text = "Rodada"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="Background" type="Node2D" parent="."]
position = Vector2(954.75, 545)
scale = Vector2(1.20812, 0.466587)

[node name="BackgroundColor" type="Sprite2D" parent="Background"]
z_index = -2
position = Vector2(22.5557, -8.57289)
scale = Vector2(1, 1)
texture = ExtResource("17_muem4")

[node name="Quadra" parent="Background" instance=ExtResource("5_muem4")]
position = Vector2(-691.777, -846.573)
scale = Vector2(0.827732, 2.14322)

[node name="Entity" type="Node2D" parent="."]

[node name="Jogador" parent="Entity" instance=ExtResource("6_dp3eg")]
position = Vector2(5, -715)
scale = Vector2(2, 2)

[node name="Bola" parent="Entity" instance=ExtResource("7_0ld40")]
position = Vector2(965, 619)
collision_layer = 4
collision_mask = 33

[node name="Target" parent="Entity" instance=ExtResource("4_jbj1t")]
z_index = 1
position = Vector2(1054, 539)
scale = Vector2(0.1, 0.1)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Button" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(133.75, 108.488)
scale = Vector2(0.841014, 0.841014)
texture = ExtResource("18_dp3eg")
region_enabled = true
region_rect = Rect2(279.949, 474.168, 217.493, 220.947)

[connection signal="text_submitted" from="UI/CoefficientA" to="UI/CoefficientA" method="_on_text_submitted"]
[connection signal="text_submitted" from="UI/CoefficientB" to="UI/CoefficientB" method="_on_text_submitted"]
[connection signal="text_submitted" from="UI/CoefficientC" to="UI/CoefficientC" method="_on_text_submitted"]
[connection signal="area_entered" from="Entity/Target" to="Entity/Target" method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="GameManager" method="_on_timer_timeout"]
